--- a/index.html
+++ b/index.html
@@ -1,1 +1,81 @@
-Jazzy is pretty cool.
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Jazzy Designs</title>
+        <link rel="stylesheet" href="css/styles.css">
+        <link rel="stylesheet" href="css/glightbox.min.css">
+    </head>
+    <body>
+        <header class="hero-box">
+            <section class="hero-image-box">
+                <img src="img/Turnaround.jpg" alt="complementary color" class="hero-image">
+            </section>
+            <section class="hero-text-box">
+                <h1 class="hero-heading">Welcome!</h1>
+                <p class="hero-text">Foudation Portfolio Page</p>
+            </section>
+        </header>
+        <section class="portfolio-container">
+            <h1>Portfolio</h1>
+            <section class="potfolio-gallery">
+
+                <div class="gallery-item">
+                    <a href="img/20210927221_Blckwell_Jazmyn_Poject2_complemantary (1).png" class="glightbox">
+                        <img src="img/20210927221_Blckwell_Jazmyn_Poject2_complemantary (1).png" alt="" class="gallery-image">
+                    </a>
+                </div>
+
+                <div class="gallery-item">
+                    <a href="img/20210929_141218.jpg" class="glightbox">
+                        <img src="img/20210929_141218.jpg" alt="" class="gallery-image">
+                    </a>
+                </div>
+
+                <div class="gallery-item">
+                    <a href="img/2021_Blackwell_Jazzy.jpg" class="glightbox">
+                        <img src="img/2021_Blackwell_Jazzy.jpg" alt="" class="gallery-image">
+                    </a>
+                </div>
+
+                <div class="gallery-item">
+                    <a href="img/made (1).jpg" class="glightbox">
+                        <img src="img/made (1).jpg" alt="" class="gallery-image">
+                    </a>
+                </div>
+
+                <div class="gallery-item">
+                    <a href="img/Newchildbookspread.png" class="glightbox">
+                        <img src="img/Newchildbookspread.png" alt="Childbook spread of where the wild things are" class="gallery-image">
+                    </a>
+                </div>
+
+                <div class="gallery-item">
+                    <a href="img/newmade.jpg" class="glightbox">
+                        <img src="img/newmade.jpg" alt="photo taken of a found line" class="gallery-image">
+                    </a>
+                </div>
+
+                <div class="gallery-item">
+                    <a href="img/pic4indesign.png" class="glightbox">
+                        <img src="img/pic4indesign.png" alt="" class="gallery-image">
+                    </a>
+                </div>
+
+                <div class="gallery-item">
+                    <a href="img/Turnaround.jpg" class="glightbox">
+                        <img src="img/Turnaround.jpg" alt="Character Design" class="gallery-image">
+                    </a>
+                </div>
+
+
+            </section>
+        </section>
+        <script src="js/glightbox.min.js"></script>
+        <script type="text/javascript">
+            const lightbox= GLightbox({ loop: true });
+        </script>
+    </body>
+</html>
